@@ -1,3 +1,9 @@
+1998-07-22  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-fileutils.m4: Added some reasonable defaults to allow
+	cross compiling; removed `mountlist.o' and `fsusage.o' from
+	LIBOBJS.
+
 Tue Jul 21 23:44:53 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* gnome-guile-checks.m4: If no build-guile, link against readline
